--- a/app-config.yaml
+++ b/app-config.yaml
@@ -20,21 +20,21 @@ backend:
     client: sqlite3
     connection: ':memory:'
 
-integrations:
-  github:
-    - host: github.com
-      token:
-        $env: GITHUB_TOKEN
-
-auth:
-  environment: development
-  providers:
-    github:
-      development:
-        clientId:
-          $env: GITHUB_DEVELOPMENT_CLIENT_ID
-        clientSecret:
-          $env: GITHUB_DEVELOPMENT_CLIENT_SECRET
+#integrations:
+#  github:
+#    - host: github.com
+#      token:
+#        $env: GITHUB_TOKEN
+#
+#auth:
+#  environment: development
+#  providers:
+#    github:
+#      development:
+#        clientId:
+#          $env: GITHUB_DEVELOPMENT_CLIENT_ID
+#        clientSecret:
+#          $env: GITHUB_DEVELOPMENT_CLIENT_SECRET
 
 catalog:
   readonly: true
